--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,6 @@ license = "GPU 3.0"
 
 [dependencies]
 clap = { version = "4.5.4", features = ["derive"] }
+envy = "0.4.2"
+serde = { version = "1.0.203", features = ["derive"] }
+toml = "0.8.14"
